@@ -1,3 +1,9 @@
+2008-11-20  Thomas Mills Hinkle  <tom@hydrophax>
+
+	* src/lib/plugins/import_export/web_import_plugin/webpage_importer.py:
+	Change back to BeautifulSoup instead of BeautifulStoneSoup -- this
+	makes sure we know about, e.g., standard self-closing tags.
+
 2008-11-17  Thomas Mills Hinkle  <tom@hydrophax>
 
 	* src/lib/plugins/import_export/gxml_plugin/gxml2_exporter.py (rec_to_xml.write_text):
